--- a/install/helm/open-match/values.yaml
+++ b/install/helm/open-match/values.yaml
@@ -281,6 +281,10 @@ global:
     tag: 1.8.1
     pullPolicy: Always
 
+  # Enable monitoring if you want to create Prometheus Operator Service Monitor for every service
+  monitoring:
+    enabled: true
+
   # Expose the telemetry configurations to all subcharts because prometheus, for example,
   # requires pod-level annotation to customize its scrape path.
   # See definitions in templates/_helpers.tpl - "prometheus.annotations" section for details
